Fix #1 and add fraction above

--- a/_data/fields.yml
+++ b/_data/fields.yml
@@ -2,8 +2,11 @@
   label: Standard deviations above mean
   desc: Also known as the z-score.
 - id: fraction
-  label: Percentile
+  label: Quantile
   desc: The fraction of things with a value less than the Z-score or X sigma.
+- id: invfraction
+  label: Fraction above
+  desc: The fraction of things with a value greater than the Z-score or X sigma.
 - id: percentile
   label: Percent under threshold
   desc: The percentage of things with a value less than the Z-score.
